Fix no MetaSlider logo overlap issue

--- a/jazzy/style.css
+++ b/jazzy/style.css
@@ -706,6 +706,10 @@ textarea {
     align-items: center;
 }
 
+.site-branding-padding {
+    padding: 200px;
+}
+
 /* Navigation
 --------------------------------------------- */
 .main-navigation {
@@ -996,7 +1000,8 @@ textarea {
     display: inline-block;
     width: 25%;
     height: auto;
-    margin: 50%;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 /* Captions
